--- a/src/index.css
+++ b/src/index.css
@@ -7,9 +7,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  background: #F1F2B5;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to bottom, #135058, #F1F2B5);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to bottom, #135058, #F1F2B5); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background-image: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);
 
 }
 
